--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search country</title>
+    <title>HW12</title>
   </head>
   <body>
-    <form class="form-inline search-form js-search-form">
-      <div class="form-group mx-sm-3 mb-2">
-        <label for="searchQuery" class="sr-only"></label>
-        <input
-          type="text"
-          class="form-control"
-          name="query"
-          id="searchQuery"
-          placeholder="Search country"
-          autocomplete="off"
-        />
-      </div>
-      <ul class="articles js-articles"></ul>
-    </form>
+    <h1 class="title">Search country</h1>
+    <input class="search" type="text" placeholder="Enter country name" />
+
+    <div class="countries-js"></div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
